@@ -1,13 +1,11 @@
-; @(#)$Ident: dist.ini 2013-12-15 20:37 pjf ;
-
 name = File-DataClass-Storage-XML
 
 [Prereqs]
 perl              = 5.01
 namespace::sweep  = 0.006
-File::DataClass   = v0.27.0
+File::DataClass   = v0.44.0
 Class::Method::ModifiersX::Augment = 0.001
-Moo               = 1.003001
+Moo               = 1.005000
 XML::Bare         = 0.47
 XML::Simple       = 2.18
 
