@@ -1,5 +1,6 @@
 Revision history for File::DataClass::Storage::XML
 
+          - Removed Ident and VERSION lines
           - Refactored storage class extension mapping
 
 0.27.2    2013-12-25 22:00:28
